--- a/CursoMVC/Views/Usuarios/Index.cshtml
+++ b/CursoMVC/Views/Usuarios/Index.cshtml
@@ -7,6 +7,11 @@
 
 <div class="row">
     <div class="col-lg-12">
+        <input type="button" class="btn btn-primary"
+               value="Nuevo" onclick="document.location.href='@Url.Content("~/Usuarios/Add")'" />
+    </div>
+    <br />
+    <div class="col-lg-12">
         <table class="table table-bordered table-hover">
             <tr>
                 <td>#</td>
