--- a/CursoMVC/Views/Shared/_Layout.cshtml
+++ b/CursoMVC/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Crud", "Index", "Usuarios")</li>
-                    <li>@Html.ActionLink("Cerrar Session", "Cerrar", "Acceso")</li>
+                    <li>@Html.ActionLink("Cerrar Session", "Cerrar", "Cerrar_Session")</li>
                 </ul>
             </div>
         </div>
