Arhivos clonalos y moevelos a una carpeta en especifica usando http

--- a/CursoMVC/Views/Shared/_Layout.cshtml
+++ b/CursoMVC/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Crud", "Index", "Usuarios")</li>
+                    <li>@Html.ActionLink("Archivos HTTP", "Index", "Archivo")</li>
                     <li>@Html.ActionLink("Cerrar Session", "Cerrar", "Cerrar_Session")</li>
                 </ul>
             </div>
