--- a/CursoMVC/Views/Shared/_Layout.cshtml
+++ b/CursoMVC/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Crud", "Index", "Usuarios")</li>
                     <li>@Html.ActionLink("Archivos HTTP", "Index", "Archivo")</li>
+                    <li>@Html.ActionLink("Animales Combobox en cascada", "Index", "Animales")</li>
                     <li>@Html.ActionLink("Cerrar Session", "Cerrar", "Cerrar_Session")</li>
                 </ul>
             </div>
