Se agrego un comobobox de cascade de 3 niveles Paises, Estados y ciudades

--- a/CursoMVC/Views/Shared/_Layout.cshtml
+++ b/CursoMVC/Views/Shared/_Layout.cshtml
@@ -17,13 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                     <li>@Html.ActionLink("Crud", "Index", "Usuarios")</li>
                     <li>@Html.ActionLink("Archivos HTTP", "Index", "Archivo")</li>
                     <li>@Html.ActionLink("Animales Combobox en cascada", "Index", "Animales")</li>
+                    <li>@Html.ActionLink("Paises Combobox en cascada", "Index", "Cascada")</li>
                     <li>@Html.ActionLink("Cerrar Session", "Cerrar", "Cerrar_Session")</li>
                 </ul>
             </div>
